# praline-config

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: .gitignore  deps.md
src/praline/: config.py  env.py  logging.py  model.py  registration.py
src/praline/config/: __init__.py  _base.py  env.py  helpers.py  logging.py  model.py
tests/test_appconfig/: test_appconfig.py  test_env.py  test_functions.py
tests/test_helpers/: test_helpers.py
tests/test_model/: test_model.py
